--- a/noise-control-app/src/App.scss
+++ b/noise-control-app/src/App.scss
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-top: 80px;
   font-family: Lato;
 
@@ -9,20 +10,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 70%;
 
     h1 {
       background-color: #5421de;
-      width: 100%;
+      width: 90%;
       color: white;
       padding: 20px;
+      border-radius: 5px;
     }
 
     .login-form {
       display: flex;
       flex-direction: column;
-      border: 1px solid gray;
-      border-radius: 5px;
-      width: 70%;
+
       align-content: center;
       justify-content: flex-start;
       padding: 40px;
@@ -36,8 +39,33 @@
         line-height: 1.5rem;
         font-family: Lato;
         font-size: 14px;
-        color: #5421de;
       }
+    }
+  }
+
+  .onboarding-basic {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 70%;
+
+    h1 {
+      background-color: #5421de;
+      width: 90%;
+      color: white;
+      padding: 20px;
+      border-radius: 5px;
+    }
+
+    input {
+      border-radius: 5px;
+      padding: 0 10px;
+      margin: 10px 0;
+      line-height: 1.5rem;
+      font-family: Lato;
+      font-size: 14px;
     }
   }
 }
