--- a/noise-control-app/src/App.scss
+++ b/noise-control-app/src/App.scss
@@ -2,6 +2,39 @@ $primary-color: #8e2e6a;
 $secondary-color: #311054;
 $highlight-color: #bfcd7e;
 
+@mixin button-style {
+  width: 80%;
+  font-size: 1.2rem;
+  padding: 10px;
+  border-radius: 10px;
+  font-family: Lato;
+  margin: 10px 0;
+  background-color: $secondary-color;
+  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+@mixin card-style {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid lightgray;
+  margin: 40px 0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+@mixin header-style {
+  background-color: $primary-color;
+  width: 90%;
+  color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
 .App {
   text-align: center;
   display: flex;
@@ -10,78 +43,57 @@ $highlight-color: #bfcd7e;
   margin-top: 80px;
   font-family: Lato;
 
+  //1.Welcome Page
   div.ui.card.welcome {
+    @include card-style;
     height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid gray;
-    margin: 40px 0;
 
     h1 {
-      background-color: $primary-color;
-      width: 90%;
-      color: white;
-      padding: 20px;
-      border-radius: 5px;
+      @include header-style;
     }
 
-    button.ui.button {
+    button.ui.button.login-button {
+      @include button-style;
+      background-color: $highlight-color;
       width: 40%;
-      font-size: 1.2rem;
-      padding: 20px;
-      border-radius: 10px;
-      font-family: Lato;
-      margin: 10px 0;
-      background-color: $secondary-color;
-      color: white;
 
-      button.ui.button.login-button {
-        background-color: $highlight-color;
-        color: white;
-
-        &:hover {
-          background-color: white;
-          color: $highlight-color;
-        }
+      &:hover {
+        background-color: white;
+        color: $highlight-color;
       }
+    }
 
-      button.ui.button.signup-button {
-        background-color: $secondary-color;
-        color: white;
+    button.ui.button.signup-button {
+      @include button-style;
+      width: 40%;
 
-        &:hover {
-          background-color: white;
-          color: $secondary-color;
-        }
+      &:hover {
+        background-color: white;
+        color: $secondary-color;
       }
     }
   }
 
-  .login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid gray;
-    border-radius: 5px;
-    width: 70%;
-    margin: 40px 0;
+  //2.Login Page
 
-    h1 {
-      background-color: $primary-color;
-      width: 90%;
-      color: white;
-      padding: 20px;
-      border-radius: 5px;
+  .login {
+    @include card-style;
+    height: 500px;
+
+    .create-link {
+      text-decoration: none;
+      color: $primary-color;
     }
 
-    .login-form {
+    h1 {
+      @include header-style;
+    }
+
+    form.login-form {
       display: flex;
       flex-direction: column;
-
       align-content: center;
-      justify-content: flex-start;
-      padding: 40px;
+      align-items: center;
       line-height: 1.8rem;
       text-align: left;
 
@@ -94,27 +106,38 @@ $highlight-color: #bfcd7e;
         font-size: 14px;
       }
 
-      .create-link {
-        text-decoration: none;
+      button.ui.button.login-button {
+        @include button-style;
       }
     }
   }
 
-  div.onboarding-basic {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid gray;
-    border-radius: 5px;
-    width: 70%;
-    margin: 40px 0;
+  //3. Onboarding WelcomePage
+  div.ui.card.welcome {
+    @include card-style;
 
     h1 {
-      background-color: $primary-color;
-      width: 90%;
-      color: white;
-      padding: 20px;
-      border-radius: 5px;
+      @include header-style;
+    }
+
+    p {
+      padding: 20px 40px;
+    }
+
+    button.ui.button.welcome-button {
+      @include button-style;
+      width: 40%;
+    }
+  }
+
+  //4. Onboarding Basic
+
+  div.onboarding-basic {
+    @include card-style;
+    height: 500px;
+
+    h1 {
+      @include header-style;
     }
 
     input {
@@ -128,43 +151,32 @@ $highlight-color: #bfcd7e;
       font-size: 14px;
       text-align: left;
     }
-    button {
-      background-color: $secondary-color;
-      color: white;
-      padding: 10px;
-      font-family: lato;
-      font-size: 1.2rem;
-      border-radius: 10px;
-      width: 80%;
-      margin: 20px 0;
+
+    button.ui.button.onboarding-basic-button {
+      @include button-style;
+      width: 100%;
     }
   }
+
+  //5. Onboarding Intake
 
   div.ui.card.onboarding-intake {
+    @include card-style;
     height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid gray;
-    margin: 40px 0;
 
     h1 {
-      background-color: $primary-color;
-      width: 90%;
-      color: white;
-      padding: 20px;
-      border-radius: 5px;
+      @include header-style;
     }
 
-    button.ui.button {
-      background-color: $secondary-color;
-      color: white;
-      padding: 10px;
-      font-family: lato;
-      font-size: 1.2rem;
-      border-radius: 10px;
-      width: 80%;
-      margin: 20px 0;
+    form.onboarding-intake-form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    button.ui.button.onboarding-intake-button {
+      @include button-style;
+      width: 100%;
     }
 
     input {
@@ -180,30 +192,20 @@ $highlight-color: #bfcd7e;
     }
   }
 
+  //6.Onboarding Preferences
+
   div.ui.card.onboarding-preferences {
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid gray;
-    margin: 40px 0;
+    @include card-style;
 
     form.onboarding-preferences-form {
+      margin: 0 40px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      justify-content: center;
 
-      button.ui.button {
-        background-color: $secondary-color;
-        color: white;
-        padding: 10px;
-        font-family: lato;
-        font-size: 1.2rem;
-        border-radius: 10px;
-        width: 80%;
-        margin: 20px 0;
-        display: flex;
-        justify-content: center;
+      button.ui.button.onboarding-preferences-button {
+        @include button-style;
       }
 
       button {
@@ -215,11 +217,7 @@ $highlight-color: #bfcd7e;
     }
 
     h1 {
-      background-color: $primary-color;
-      width: 90%;
-      color: white;
-      padding: 20px;
-      border-radius: 5px;
+      @include header-style;
     }
   }
 }
