--- a/noise-control-app/src/App.scss
+++ b/noise-control-app/src/App.scss
@@ -56,7 +56,7 @@ $accent-color: #ee7777;
     button.ui.button.login-button {
       @include button-style;
       background-color: $highlight-color;
-      width: 40%;
+      width: 200px;
 
       &:hover {
         background-color: white;
@@ -66,7 +66,7 @@ $accent-color: #ee7777;
 
     button.ui.button.signup-button {
       @include button-style;
-      width: 40%;
+      width: 200px;
 
       &:hover {
         background-color: white;
