--- a/noise-control-app/src/App.scss
+++ b/noise-control-app/src/App.scss
@@ -277,9 +277,20 @@ $accent-color: #ee7777;
   border-radius: 10px;
 }
 
+.class-page p {
+  font-size: 20px;
+  color: white;
+}
+
 .class-stats {
   display: block;
   font-size: 20px;
   color: white;
   padding: 10px;
+}
+
+.class-buttons {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
