--- a/noise-control-app/src/App.scss
+++ b/noise-control-app/src/App.scss
@@ -294,3 +294,10 @@ $accent-color: #ee7777;
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+.score-card {
+  border: 5px solid white;
+  border-radius: 10px;
+  margin: 15px;
+  padding: 10px;
+}
