More work done on Previous Safaris

--- a/noise-control-app/src/App.scss
+++ b/noise-control-app/src/App.scss
@@ -298,6 +298,6 @@ $accent-color: #ee7777;
 .score-card {
   border: 5px solid white;
   border-radius: 10px;
-  margin: 15px;
+  margin: 20px 15px;
   padding: 10px;
 }
